--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,24 +9,33 @@
         <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact</a>
         </li>
       </ul>
-      <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ ano }} URKU PORTFOLIO </span>All Right Reserved.</p>
+      <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ ano }} {{ info.infor.titulo }} </span>All Right Reserved.</p>
     </div>
-    <div class="ae-grid__item item-lg-4 au-xs-ta-center"><a href="#0" class="rk-social-btn ">
-      <svg>
-        <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
-      </svg></a><a href="#0" class="rk-social-btn ">
+    <div class="ae-grid__item item-lg-4 au-xs-ta-center">
+      <a [href]="info.infor.facebook" class="rk-social-btn ">
+        <svg>
+          <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
+        </svg>
+      </a>
+      <a [href]="info.infor.twitter" class="rk-social-btn ">
       <svg>
         <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
-      </svg></a><a href="#0" class="rk-social-btn ">
+      </svg>
+      </a>
+      <a [href]="info.infor.instagram" class="rk-social-btn ">
       <svg>
         <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
-      </svg></a><a href="#0" class="rk-social-btn ">
+      </svg>
+      </a>
+      <a [href]="info.infor.tumblr" class="rk-social-btn ">
       <svg>
         <use xlink:href="assets/img/symbols.svg#icon-tumblr"></use>
-      </svg></a></div>
+      </svg>
+      </a>
+    </div>
     <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-      <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">contact@urkuportfolio.com </a></span></p>
-      <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
+      <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">{{ info.infor.email }} </a></span></p>
+      <p class="rk-footer__text rk-footer__by">Theme by <a [href]="info.infor.website" class="ae-u-bolder">{{ info.infor.criado }}.</a></p>
     </div>
   </div>
 </footer>
