--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
     </svg>
   </label>
   <div class="ae-container-fluid rk-topbar">
-    <h1 class="rk-logo"><a routerLink="/">urku portfolio<sup>tm</sup></a></h1>
+    <h1 class="rk-logo"><a routerLink="/">{{ info.infor.titulo }}</a></h1>
     <nav class="rk-navigation">
       <ul class="rk-menu">
         <li class="rk-menu__item" routerLinkActive="active">
