--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,9 +1,13 @@
 <div class="ae-grid au-xs-ta-center au-mb-4  animated fadeIn">
+  <div style="width: 100%; text-align: center" *ngIf="carregando">
+    <app-loading></app-loading>
+  </div>
+
+
   <div class="ae-grid__item item-lg-4 ae-kappa au-mb-3" *ngFor="let item of equipe">
     <img [src]="item.picture.large" alt="" class="au-mb-3">
     <h5 class="ae-u-bolder au-mt-2">{{ item.name.first }} {{ item.name.last }}</h5>
-    <p class="ae-u-bolder au-mb-3">Graphic Designer</p>
-    <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p><a href="#0" class="ae-u-bolder au-underline">@robertwilliams</a>
+    <a href="#0" class="ae-u-bolder au-underline">@{{ item.login.username }}</a>
   </div>
 <div class="ae-grid au-pt-2">
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
