--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,14 +23,18 @@
         </li>
 
       </ul>
-      <form class="rk-search">
-        <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+      <div class="rk-search">
+        <input
+          name="buscar"
+          #buscar
+          (keyup.enter)="buscar_produto(buscar.value)"
+          type="text" placeholder="Search" id="urku-search" class="rk-search-field">
         <label for="urku-search">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-search"></use>
           </svg>
         </label>
-      </form>
+      </div>
     </nav>
   </div>
 </header>
