--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,26 @@
-<p>
-  search works!
-</p>
+<section class="ae-container-fluid ae-container-fluid--inner rk-portfolio animated fadeIn">
+  <div class="au-xs-ta-center au-lg-ta-left">
+    <ul class="rk-menu rk-categories-menu">
+      <li class="rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Flex</a>
+      </li>
+      <li class="rk-menu__item"><a href="portfolio-alt.html" class="rk-menu__link">Switch</a>
+      </li>
+      <li class="rk-menu__item"><a href="portfolio-raw.html" class="rk-menu__link">Static</a>
+      </li>
+      <li class="active rk-menu__item"><a href="portfolio-masonry.html" class="rk-menu__link">Masonry</a>
+      </li>
+    </ul>
+  </div>
+  <div style="width: 100%; text-align: center" *ngIf="loadProduct">
+    <app-loading></app-loading>
+  </div>
+  <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+    <a [routerLink]="['/produto', item.cod]" class="rk-item ae-masonry__item" *ngFor="let item of listaProdutos">
+      <img src="assets/data/productos/{{ item.url }}.jpg" alt="">
+      <div class="item-meta">
+        <h2>{{ item.titulo }}</h2>
+        <p>{{ item.categoria }}</p>
+      </div>
+    </a>
+  </div>
+</section>
